Pequenas correções no tamanho das fontes, organização do codigo por pastas e edição das tabelas

--- a/analiseliteratura.html
+++ b/analiseliteratura.html
@@ -10,8 +10,7 @@
 
 	<title>Legionella pneumophila </title>
 
-	<link href="./website/css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/portfolio-item.css" rel="stylesheet">
+	<link href="./website/css/bootstrap.css" rel="stylesheet">
 
 </head>
 
@@ -53,15 +52,21 @@
 			</div>
 		</div>
 	</nav>
+
 	<br>
 	<br>
 	<br>
+	<br>
+
+    <center><h3> Análise de Literatura </h3></center>
+
+    <p> &nbsp &nbsp &nbsp Primeiramente, começou-se por automatizar a seleção dos artigos relevantes que permitiam conhecer melhor o organismo, via metabólica e genes de interesse para o grupo. Esta automatização foi realizada com recurso ao Biopython que permitiu uma pesquisa rápida e eficiente na plataforma Pubmed. Assim desenvolveram-se duas funções: uma que permite obter o número de artigos disponíveis relacionados com termo colocado como argumento e outra que permite obter outras informações (como autor, título, etc) importantes para identificação dos artigos relevantes.  </p>
+
+    <center>
+ 		<img src="./website/img/Flavin_Biosynthesis.png" alt="" >
+			<figcaption>Fig1. Via de biossíntese da Flavina</figcaption>
+	</center>
+
+	<p>&nbsp &nbsp &nbsp A via da Biossíntese da Riboflavina, também conhecida como vitamina B2 (este composto é um nutriente essencial, sendo que os mamíferos não têm capacidade de o produzir), é uma via essencial á sobrevivência do organismo sendo os seus produtos, FMN e FAD, bastante utilizados como reagentes noutras vias metabólicas, essencialmente em reações redox. De forma a produzir uma molécula de riboflavina a via (ilustrada na Figura 1) inicia-se com a reação entre uma molécula de GTP e duas moléculas de ribulose 5-fosfato, havendo a formação de 5-amino-6-ribitylaminuracilo devido a um conjunto de reações nomeadamente desaminações, reduções e desfosforilações. Por sua vez a condensação entre este composto e o 1-deoxi-L-glicero-tetrulose-4-fosfato obtida da ribulose 5-fosfato leva á formação de 6,7-dimetil-8-(1-D-ribityl)lumazine. Finalmente devido á ação enzimática resulta a riboflavina.</p>
 
 
-    <br>
-    <br>
-    <br>
-
-    <h4> Análise de Literatura </h4>
-
-    <p> Primeiramente, começou-se por automatizar a seleção dos artigos relevantes que permitiam conhecer melhor o organismo, via metabólica e genes de interesse para o grupo. Esta automatização foi realizada com recurso ao Biopython que permitiu uma pesquisa rápida e eficiente na plataforma Pubmed. Assim desenvolveram-se duas funções: uma que permite obter o número de artigos disponíveis relacionados com termo colocado como argumento e outra que permite obter outras informações (como autor, título, etc) importantes para identificação dos artigos relevantes.  </p>
