--- a/tabela.html
+++ b/tabela.html
@@ -10,8 +10,7 @@
 
 	<title>Legionella pneumophila </title>
 
-	<link href="./website/css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/portfolio-item.css" rel="stylesheet">
+	<link href="./website/css/bootstrap.css" rel="stylesheet">
 
 </head>
 
@@ -53,108 +52,12 @@
 			</div>
 		</div>
 	</nav>
+
 	<br>
 	<br>
 	<br>
-
-
-    <h4> <br><br><br> --------------- <br> Exemplo das tabelas do ano passado. Ainda falta adicionar query para pesquisar e mostrar X por página. <br>
-	---------------<br></h4>
-	<div id="page-wrapper" style="display:table">
-		<div class="row">
-			<div class="col-lg-12">
-				<h2 class="page-header">Tabelas resumo de anotações</h2>
-			</div>
-			<!-- /.col-lg-12 -->
-		</div>
-
-		<!-- /.row -->
-		<div class="row">
-			<div class="col-lg-12">
-					<!--div class="panel panel-default">
-						<div class="panel-heading">
-							<b>Informações principais dos genes e proteínas</b>
-						</div>
-						<!-- /.panel-heading ->
-						<div class="panel-body"-->
-							<div class="dataTable_wrapper" style="margin:0; padding:0; display:table">
-								<table class="table table-condensed table-bordered" id="dataTables-example1" style="margin:0">
-									<thead>
-										<tr>
-											<th>Locus Tag</th>
-											<th>GeneID</th>
-											<th>Gene Name</th>
-											<th>Strand</th>
-											<th>UniprotID</th>
-											<th>Revision</th>
-											<th>Accession nº</th>
-											<th>Protein Name</th>
-											<th>#AA</th>
-											<th>EC_Number</th>
-											<th>Description</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr class='odd' role='row'><td>lpg2079</td><td>19833645</td><td>traG</td><td>-</td><td>Q5ZTT2</td><td>1 em 5</td><td>YP_096092.1</td><td>hypothetical protein</td><td>909</td><td></td><td>Transport and binding</td></tr>
-										<tr class='even' role='row'><td>lpg2080</td><td>19833646</td><td>traH</td><td>-</td><td>Q5ZTT1</td><td>1 em 5</td><td>YP_096093.1</td><td>hypothetical protein</td><td>461</td><td></td><td>Transport and binding</td></tr>
-										<tr class='odd' role='row'><td>lpg2081</td><td>19833647</td><td>traF</td><td>-</td><td>Q5ZTT0</td><td>1 em 5</td><td>YP_096094.1</td><td>sex pilus assembly TraF, thiol-disulfide isomerase and thioredoxins</td><td>140</td><td></td><td>Transport and binding, Viral functions / Phage / Transposases</td></tr>
-									</tbody>
-								</table>
-							</div>
-							<!-- /.table-responsive -->
-							
-						<!--/div>
-						<!-- /.panel-body ->
-					</div>
-					<!-- /.panel -->
-				</div>
-				<!-- /.col-lg-12 -->
-			</div>
-			<!-- /.row -->
-
-		</div>
-		<!-- /#page-wrapper -->
-
-	</div>
-	<!-- /#wrapper -->
-
-	<!-- jQuery -->
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-
-	<!-- Bootstrap Core JavaScript -->
-	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-	<!-- Metis Menu Plugin JavaScript -->
-	<script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
-
-	<!-- DataTables JavaScript -->
-	<script src="bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-	<script src="bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>
-
-	<!-- Custom Theme JavaScript -->
-	<script src="dist/js/sb-admin-2.js"></script>
-
-	<!-- Page-Level Demo Scripts - Tables - Use for reference -->
-
-	<script>
-	$(document).ready(function () {
-		$('#dataTables-example1').DataTable({
-			responsive: true
-		});
-		$('#dataTables-example2').DataTable({
-			responsive: true
-		});
-	});
-	</script>
-
-	<!-- Footer -->
-	<footer class="py-3 bg-dark">
-		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; 2018</p>
-		</div>
-		<!-- /.container -->
-	</footer>
-
-
+	<center><h3>Tabela Resumo</h3></center>
+	
+	
 </body>
 
