Adicionei análise de homologias por BLAST

--- a/Introducao.html
+++ b/Introducao.html
@@ -59,31 +59,29 @@
 	<center><h3>Introdução</h3></center>
 	<p>
 		&nbsp &nbsp &nbsp A Doença do Legionário foi reconhecida pela primeira vez em 1976 após um surto de
-		pneumonia numa convenção que decorria em Filadélfia. Após análise dos pacientes o microorganismo
-		responsável pela infeção foi identificado tendo-se verificado que era um bacilo gramnegativo
+		pneumonia numa convenção que decorria em Filadélfia. Após análise dos pacientes, o microorganismo
+		responsável pela infeção foi identificado como um bacilo gram-negativo
 		a que se deu o nome de Legionella pneumophila. Atualmente sabe-se que esta bactéria é
 		aeróbica e pertence ao filo Proteobacteria, classe Gammaproteobacteria, ordem Legionellales e à
-		família das Legionellaceae (família esta que engloba mais de 50 espécies e 70 sub-espécies). A
+		família das Legionellaceae (família esta que engloba mais de 50 espécies e 70 subespécies). A
 		Legionella pneumophila em específico tem 16 estirpes que estão designadas de 1 a 16, sendo que as
-		estirpes 1, 4 e 6 são as mais comummente implicadas na infeção em Humanos (a estirpe em que o
+		estirpes 1, 4 e 6 são as mais comummente implicadas na infeção em humanos (a estirpe em que o
 		nosso trabalho se focará é a Legionella pneumophila subsp. pneumophila str. Philadelphia 1, sendo
 		esta a estirpe mais patogénica causando entre 70 e 90% dos casos de Legionelose em pacientes
 		adultos)<sup>1</sup>.<br><br>
-		&nbsp &nbsp &nbsp Este micro-organismo desencadeia Legionelose em pacientes infetados, podendo esta
+		&nbsp &nbsp &nbsp Este microorganismo desencadeia Legionelose em pacientes infetados, podendo esta
 		condição referir-se a duas síndromes clinicas distintas: a Doença do Legionário e a Febre de Pontiac.
 		Clinicamente a Doença do Legionário caracteriza-se como uma pneumonia aguda que se manifesta
 		após um período de incubação que tem entre 2 e 10 dias acompanhada por febre geralmente elevada
 		(40ºC), expetoração podendo ou não conter sangue, dor no peito, náuseas, vómitos e diarreia. Por
 		outro lado, a Febre de Pontiac é clinicamente menos grave sendo caracterizada como uma infeção
-		do trato respiratório que acaba por desaparecer naturalmente sendo muitas vezes confundida como
+		do trato respiratório que acaba por desaparecer naturalmente, sendo muitas vezes confundida como
 		uma gripe comum<sup>2</sup>.<br><br>
 		&nbsp &nbsp &nbsp Os organismos desta espécie são bactérias gram-negativas e aeróbicas que crescem em
 		habitats aquáticos naturais, como rios ou lagos, ou artificiais, como torres de água, sistemas de
-		refrigeração, equipamento de terapia de respiração, chuveiros, ou spas, sendo estas as formas mais
-		comuns de transmissão para humanos. O meio de crescimento tem que conter preferencialmente L-
-		cisteína e ferro, quanto á temperatura ideal de crescimento esta situa-se entre os 28 e os 40ºC sendo
-		que abaixo de 20ºC, a bactéria encontra-se dormente, e acima de 60ºC o microrganismo morre. O
-		método de transmissão ocorre através da inalação de aerossóis contaminados com a Legionella
+		refrigeração, equipamento de terapia de respiração, chuveiros ou spas. O meio de crescimento tem que conter preferencialmente L-
+		cisteína e ferro, quanto à temperatura ideal de crescimento esta situa-se entre os 28 e os 40ºC, sendo
+		que abaixo de 20ºC a bactéria encontra-se dormente e acima de 60ºC o microrganismo morre. A transmissão aos humanos ocorre através da inalação de aerossóis contaminados com a Legionella
 		pneumophila ou através do contacto entre feridas e água contaminada.<br><br>
 		&nbsp &nbsp &nbsp A fisiopatologia da Legionella inicia-se quando os microrganismos são aspirados e chegam aos
 		alvéolos pulmonares onde sofrem fagocitose pelos macrófagos aí presentes. Uma vez que estes
