--- a/analisegeneseproteinas.html
+++ b/analisegeneseproteinas.html
@@ -59,7 +59,7 @@
 
 
 	<center><h3> Análise e anotação de genes e proteínas de interesse  </h3></center>
-	<p>  &nbsp De forma a proceder a anotação dos genes e proteínas de interesse realizou-se uma tabela com a seguinte informação: 
+	<p>  &nbsp De forma a proceder à anotação dos genes e proteínas de interesse realizou-se uma tabela com a seguinte informação: 
 		<ol>
 			<li>Identificação do gene: geneID; accession (NCBI); locus tag (NCBI); nome do gene (NCBI); strand (NCBI) </li>
 			<li>Identifcação da proteína: UniprotID; grau de revisão (Uniprot); accession number (Uniprot); protein name (Uniprot); número de aminoácidos (Uniprot); EC number (NCBI); descrição/função (NCBI); localização (Biocyc); gene ontology (Uniprot)</li>
@@ -69,7 +69,7 @@
 		&nbsp &nbsp &nbsp Esta informação foi extraída das bases de dados com recurso a scripts Biopython e confirmada com a tabela disponibilizada no NCBI, mais especificamente no seguinte site: <a href="https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116"> https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116</a><br>  
 	</p>
 	<p>
-		&nbsp &nbsp &nbspComo auxilio para esta anotação, começou-se por verificar que proteínas estão relacionadas com a via metabólica, biossíntese de flavina. Desta forma, recorreu-se à plataforma Biocyc onde se verificou que existiam 5 proteínas principais de interesse.  
+		&nbsp &nbsp &nbspComo auxilio para esta anotação, começou-se por verificar que proteínas estão relacionadas com a via metabólica, biossíntese de flavina. Desta forma, recorreu-se à plataforma Biocyc onde se verificou que existem cinco proteínas principais de interesse.  
 
 		Também foi criado um script que permitisse aceder ao NCBI e extrair o genoma completo do organismo Legionella pneumophila subsp. pneumophila str. Philadelphia 1, guardando este num ficheiro do tipo genbank.   
 	</p>
@@ -80,7 +80,7 @@
 			<p>
 				&nbsp &nbsp &nbspEste gene codifica a proteína riboflavin biosynthesis protein RibD.  
 
-				A Riboflavin biosynthesis protein RibD é uma enzima que entra na via metabólica da Flavina sendo responsável pela síntese da 5-amino-6-(D-ribitylamino)uracil a partir do GTP. Esta enzima tem como cofactor o ião zinco e apresenta diversos locais de ligação, quer ao substrato quer ao NADP. Dentro da via é responsável pela catálise das seguintes equações químicas: 
+				A Riboflavin biosynthesis protein RibD é uma enzima que entra na via metabólica da Flavina sendo responsável pela síntese da 5-amino-6-(D-ribitylamino)uracil a partir do GTP. Esta enzima tem como cofator o ião zinco e apresenta diversos locais de ligação, quer ao substrato quer ao NADP. Dentro da via é responsável pela catálise das seguintes equações químicas: 
 			</p>
 				<center>2,5-diamino-6-hydroxy-4-(5-phosphoribosylamino)pyrimidine+H2O=5-amino-6-(5-phosphoribosylamino)uracil + NH3</center>
 				<br>
@@ -131,7 +131,7 @@
 
 				Este gene codifica a proteína GTP cyclohydrolase-2.  
 
-				A 6,7-dimethyl-8-ribityllumazine synthase é uma enzima da via metabólica da biossíntese da Flavina que é responsável pela catálise de 6,7-dimethyl-8-ribityllumazine através da condensação 5-amino-6-(D-ribitylamino)uracil com 3,4-dihydroxy-2-butanone 4-phosphate. Esta moléculas ligam-se á enzima através de locais de ligação específicos da mesmas. A equação química desta reação é dada através de: 
+				A 6,7-dimethyl-8-ribityllumazine synthase é uma enzima da via metabólica da biossíntese da Flavina que é responsável pela catálise de 6,7-dimethyl-8-ribityllumazine através da condensação 5-amino-6-(D-ribitylamino)uracil com 3,4-dihydroxy-2-butanone 4-phosphate. Estas moléculas ligam-se á enzima através de locais de ligação específicos da mesma. A equação química desta reação é: 
 			</p>
 				<center>deoxy-L-glycero-tetrulose 4-phosphate + 5-amino-6-(D-ribitylamino)uracil = 6,7-dimethyl-8-(D-ribityl)lumazine + 2 H2O + phosphate</center>
 				<br>
@@ -146,7 +146,7 @@
 			<p>
 				&nbsp &nbsp &nbsp Este gene codifica a proteína ribiflavin biosynthesis protein RibF.  
 
-				A Riboflavin biosynthesis protein RibF é uma enzima que entra na subvia da síntese do FAD a partir do FMN  sendo a responsável por esta conversão. De igual forma está também relacionada com a biossíntese do FMN a partir da riboflavina. Esta enzima tem locais de ligação para o ATP, FAD, Riboflavina e FMN. As equações de conversão de riboflafina em FMN e FMN em FAD são respetivamente as seguintes:
+				A Riboflavin biosynthesis protein RibF é uma enzima que entra na subvia da síntese do FAD a partir do FMN  sendo a responsável por esta conversão. De igual forma está também relacionada com a biossíntese do FMN a partir da riboflavina. Esta enzima tem locais de ligação para o ATP, FAD, Riboflavina e FMN. As equações de conversão de riboflafina em FMN e FMN em FAD são, respetivamente, as seguintes:
 			</p>
 				<center>	ATP + riboflavin = ADP + FMN  </center>
 				<br>
