--- a/domProteinas.html
+++ b/domProteinas.html
@@ -58,16 +58,17 @@
 	<br>
 	<br>
 
-	<center><h3>Domínio de proteínas</h3></center>
+	<center><h3>Domínios de proteínas</h3></center>
 
-	<p>&nbsp &nbsp &nbsp De forma a completar informação à cerca das funções das proteínas de interesse, recorreu-se à análise dos domínios dessas proteínas através da pesquisa em bases de dados de domínios de proteínas como a NCBI CDD (conserved domain database). </p>
+	<p>&nbsp &nbsp &nbsp De forma a completar a informação acerca das funções das proteínas de interesse, recorreu-se à análise dos domínios dessas proteínas através da pesquisa na base de dados de domínios de proteínas NCBI CDD (conserved domain database). </p>
+	<p> &nbsp &nbsp &nbsp Assim, inseriu-se a sequência da proteína riboflavin biosynthesis protein RibD nesta base de dados, tendo-se obtido como resultado o domínio MafB18-deam super family, pelo que podemos inferir que a proteína tem uma função enzimática, tal como anteriormente verificado em outras bases de dados como a Uniprot. Mais especificamente, podemos concluir que esta proteína tem uma função de deaminase, estando por isso envolvida na remoção de grupos amina de determinadas moléculas. Podemos fazer esta inferência, uma vez que o e-value obtido é bastante baixo (2.29e-69) pelo que que se podem considerar os dados obtidos como confiáveis. <br> </p>
 
 	<center>
  		<img src="./website/img/cdd1.png" alt="" >
 			<figcaption>Fig1. Domínio presente na proteina riboflavin biosynthesis protein RibD</figcaption>
 	</center>
 
-	<p> &nbsp &nbsp &nbsp Assim, inseriu-se a sequência da proteína riboflavin biosynthesis protein RibD nesta base de dados, tendo-se obtido como resultado o domínio MafB18-deam super family, pelo que podemos inferir que a proteína tem uma função enzimática, tal como anteriormente verificado em outras bases de dados como a Uniprot. Mais especificamente, podemos concluir que esta proteína tem uma função de deaminase, estando por isso envolvida na remoção de grupos amina de determinadas moléculas. Podemos fazer esta inferência, uma vez que o e-value obtido é bastante baixo (2.29e-69) pelo que que se podem considerar os dados obtidos como confiáveis. <br>
+	<p>
 	&nbsp &nbsp &nbsp De seguida, para análise da proteína riboflavin synthase subunit alpha, inseriu-se a sequência na base de dados, tendo-se obtido como resultado o domínio PRK09289, podendo-se concluir que a proteína terá a função de catalisar reações envolvidas na biossíntese de riboflavina, função já esperada e concordante com os resultados obtidos noutras bases de dados. Os resultados podem ser considerados fiáveis uma vez que o e-value é, mais uma vez, bastante reduzido (2.09e-84). 
  	</p>
 
