--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <div class="container">
 
       <!-- Portfolio Item Heading -->
-      <h1 class="my-4">Legionella pneumophila</h1>
+      <h1 class="my-4"><i>Legionella pneumophila</i></h1>
       <hr>
 
       <!-- Portfolio Item Row -->
       <div class="row">
         <div class="col-md-6">
           <h3 class="my-3">Descrição do Projeto</h3>
-          <p>Este trabalho tem como principal objetivo a utilização de algumas ferramentas bioinformáticas abordadas na unidade curricular de Laboratórios de Bioinformática. Mais concretamente será analisada a via metabólica – Biossíntese de Flavina - da Legionella pneumophila subsp. pneumophila str. Philadelphia 1, assim como proteínas e genes de interesse para esta via, não só ao nível metabólico como também ao nível da regulação.<br> Para esta análise recorreu-se à pesquisa em bases de dados relevantes, assim como ao desenvolvimento de scripts de Biopython que permitem a automatizar a análise e anotação de genes e proteínas de interesse.  </p>
+          <p>Este trabalho tem como principal objetivo a utilização de algumas ferramentas bioinformáticas abordadas na unidade curricular de Laboratórios de Bioinformática. Mais concretamente será analisada a via metabólica – Biossíntese de Flavina - da <i>Legionella pneumophila subsp. pneumophila str. Philadelphia 1</i>, assim como proteínas e genes de interesse para esta via, não só ao nível metabólico como também ao nível da regulação.<br> Para esta análise recorreu-se à pesquisa em bases de dados relevantes, assim como ao desenvolvimento de scripts de Biopython, que permitem automatizar a análise e anotação de genes e proteínas de interesse.  </p>
         </div>
 
         <div class="col-md-6">
