--- a/trabalhorealizado.html
+++ b/trabalhorealizado.html
@@ -58,16 +58,18 @@
 	<br>
 	<br>
 
-	<center><h3> <a class="nav-link" href="./analiseliteratura.html"> Análise de Literatura </a></h3></center>
-
 	<center><h3> <a class="nav-link" href="./analisegeneseproteinas.html">Análise e anotação de genes e proteínas de interesse</a></h3><center>
 
-	<center><h3> <a class="nav-link" href="./homologiasBLAST.html"> Análise de homologias por BLAST</a> </h3></center>
+	<center><h3> <a class="nav-link" href="./analiseliteratura.html"> Análise de Literatura </a></h3></center>
+
+	<center><h3> <a class="nav-link" href="./homologiasBLAST.html"> Análise de homologias por Blast</a> </h3></center>
+
+	<center><h3> <a class="nav-link" href="./alinhamento.html"> Alinhamento múltiplo e filogenia</a> </h3></center>
+
+	<center><h3> <a class="nav-link" href="./regulacao.html"> Regulação da via metabólica </a></h3></center>
 
 	<center><h3> <a class="nav-link" href="./domProteinas.html"> Domínios de proteínas</a> </h3></center>
 
 	<center><h3> <a class="nav-link" href="./motifseestrutura.html"> Análise de motifs e estrutura das proteínas</a> </h3></center>
 
-	<center><h3> <a class="nav-link" href="./alinhamento.html"> Alinhamento múltiplo e filogenia</a> </h3></center>
-
-	<center><h3> <a class="nav-link" href="./regulacao.html"> Regulação das vias metabólicas </a></h3></center>
+	
