--- a/analisegeneseproteinas.html
+++ b/analisegeneseproteinas.html
@@ -61,17 +61,54 @@
 	<center><h3> Análise e anotação de genes e proteínas de interesse  </h3></center>
 	<p>  &nbsp De forma a proceder à anotação dos genes e proteínas de interesse realizou-se uma tabela com a seguinte informação: 
 		<ol>
-			<li>Identificação do gene: geneID; accession (NCBI); locus tag (NCBI); nome do gene (NCBI); strand (NCBI) </li>
-			<li>Identifcação da proteína: UniprotID; grau de revisão (Uniprot); accession number (Uniprot); protein name (Uniprot); número de aminoácidos (Uniprot); EC number (NCBI); descrição/função (NCBI); localização (Biocyc); gene ontology (Uniprot)</li>
+			<li>Identificação do gene: geneID; accession (NCBI); locus tag (NCBI); gene name (NCBI); strand (NCBI) </li>
+			<li>Identifcação da proteína: UniprotID; Revision (Uniprot); accession number (Uniprot); protein name (Uniprot); Length; EC number (NCBI); Description (NCBI); Localization (Biocyc); gene ontology (Uniprot)</li>
 		</ol>
 	</p>
+
+	<p> &nbsp &nbsp &nbsp A tabela completa encontra-se no separador <a href="./tabela.html"> Tabelas Resumo </a>.<br>
+		&nbsp &nbsp &nbsp  <a href="./scripts/Tabela/Preencher_a_tabela.py"> Aqui </a> está apresentado o script que permite obter o genoma completo da <i>Legionella pneumophila subsp. pneumophila str. Philadelphia 1</i> e preencher os campos da tabela.<br><br>
+
+		De forma a poder executar o script corretamente, é necessário ter os seguintes ficheiros:
+		<ol>
+		<li><a href="./scripts/Tabela/prot1.fasta">Proteina 1</a></li>
+		<li><a href="./scripts/Tabela/prot2.fasta">Proteina 2</a></li>
+		<li><a href="./scripts/Tabela/prot3.fasta">Proteina 3</a></li>
+		<li><a href="./scripts/Tabela/prot4.fasta">Proteina 4</a></li>
+		<li><a href="./scripts/Tabela/prot5.fasta">Proteina 5</a></li>
+		</ol>
+	</p>
+
+	<p> Abaixo estão expostos os outputs do script que permite preencher a Tabela Resumo.
+
+		<center>
+ 		<img src="./website/img/Print_preencher_tabela.png" alt="" >
+			<figcaption>Fig1. Gene name, gene ID, locus_tag, strand, EC_number e Description</figcaption>
+		</center>
+
+		<br>
+
+		<center>
+ 		<img src="./website/img/Print_preencher_tabela_2.png" alt="" >
+			<figcaption>Fig2. Protein name, accession number e length </figcaption>
+		</center>
+
+		<br>
+
+		<center>
+ 		<img src="./website/img/Print_preencher_tabela_3.png" alt="" >
+			<figcaption>Fig3. UniprotID e Accession Number de cada proteína</figcaption>
+		</center>
+
+		<br>
+
 	<p>
 		&nbsp &nbsp &nbsp Esta informação foi extraída das bases de dados com recurso a scripts Biopython e confirmada com a tabela disponibilizada no NCBI, mais especificamente no seguinte site: <a href="https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116"> https://www.ncbi.nlm.nih.gov/genome/proteins/416?genome_assembly_id=300116</a><br>  
 	</p>
 	<p>
 		&nbsp &nbsp &nbspComo auxilio para esta anotação, começou-se por verificar que proteínas estão relacionadas com a via metabólica, biossíntese de flavina. Desta forma, recorreu-se à plataforma Biocyc onde se verificou que existem cinco proteínas principais de interesse.  
 
-		Também foi criado um script que permitisse aceder ao NCBI e extrair o genoma completo do organismo Legionella pneumophila subsp. pneumophila str. Philadelphia 1, guardando este num ficheiro do tipo genbank.   
+		Também foi criado um script que permitisse aceder ao NCBI e extrair o genoma completo do organismo Legionella pneumophila subsp. pneumophila str. Philadelphia 1, guardando este num ficheiro do tipo <a href="./scripts/Tabela/genoma_inteiro.gb"> genbank </a>.   
 	</p>
 
 	<ul style="list-style-type:disc">
@@ -89,7 +126,6 @@
 			<p>
 				&nbsp &nbsp &nbsp A localização subcelular da proteína foi inferida com a consulta da plataforma LOCTREE, tendo-se chegado à conclusão que a localização é o citoplasma, obtendo-se esta informação com um score de 100, sendo por isso uma informação confiável.  
 			</p>
-
 
 	<ul style="list-style-type:disc">
 		<li><h5> Gene ribE </h5></li>	
