--- a/analiseliteratura.html
+++ b/analiseliteratura.html
@@ -62,11 +62,29 @@
 
     <p> &nbsp &nbsp &nbsp Primeiramente, começou-se por automatizar a seleção dos artigos relevantes que permitiam conhecer melhor o organismo, via metabólica e genes de interesse para o grupo. Esta automatização foi realizada com recurso ao Biopython que permitiu uma pesquisa rápida e eficiente na plataforma Pubmed. Assim desenvolveram-se duas funções: uma que permite obter o número de artigos disponíveis relacionados com termo colocado como argumento e outra que permite obter outras informações (como autor, título, etc) importantes para identificação dos artigos relevantes.  </p>
 
+    <p> <a href="./scripts/Analise_Literatura/Analise_da_literatura.py"> Aqui </a> encontra-se o script desenvolvido para esta análise.</p>
+
     <center>
  		<img src="./website/img/Flavin_Biosynthesis.png" alt="" >
 			<figcaption>Fig1. Via de biossíntese da Flavina</figcaption>
 	</center>
 
-	<p>&nbsp &nbsp &nbsp A via da Biossíntese da Riboflavina, também conhecida como vitamina B2 (este composto é um nutriente essencial, sendo que os mamíferos não têm capacidade de o produzir), é uma via essencial á sobrevivência do organismo sendo os seus produtos, FMN e FAD, bastante utilizados como reagentes noutras vias metabólicas, essencialmente em reações redox. De forma a produzir uma molécula de riboflavina a via (ilustrada na Figura 1) inicia-se com a reação entre uma molécula de GTP e duas moléculas de ribulose 5-fosfato, havendo a formação de 5-amino-6-ribitylaminuracilo devido a um conjunto de reações nomeadamente desaminações, reduções e desfosforilações. Por sua vez a condensação entre este composto e o 1-deoxi-L-glicero-tetrulose-4-fosfato obtida da ribulose 5-fosfato leva á formação de 6,7-dimetil-8-(1-D-ribityl)lumazine. Finalmente devido á ação enzimática resulta a riboflavina.</p>
+	<p>&nbsp &nbsp &nbsp A via da Biossíntese da Riboflavina, também conhecida como vitamina B2 (este composto é um nutriente essencial, sendo que os mamíferos não têm capacidade de o produzir), é uma via essencial á sobrevivência do organismo sendo os seus produtos, FMN e FAD, bastante utilizados como reagentes noutras vias metabólicas, essencialmente em reações redox. De forma a produzir uma molécula de riboflavina a via (ilustrada na Figura 1) inicia-se com a reação entre uma molécula de GTP e duas moléculas de ribulose 5-fosfato, havendo a formação de 5-amino-6-ribitylaminuracilo devido a um conjunto de reações nomeadamente desaminações, reduções e desfosforilações. Por sua vez a condensação entre este composto e o 1-deoxi-L-glicero-tetrulose-4-fosfato obtida da ribulose 5-fosfato leva á formação de 6,7-dimetil-8-(1-D-ribityl)lumazine. Finalmente devido á ação enzimática resulta a riboflavina<sup>1,2,3</sup>.</p>
 
+	<center><h3> Referências </h3></center>
 
+			<p>
+			<ol>
+				<li>
+					Haase I, Sarge S, Illarionov B, Laudert D, Hohmann H-P, Bacher A, et al. Enzymes from the Haloacid Dehalogenase (HAD) Superfamily Catalyse the Elusive Dephosphorylation Step of Riboflavin Biosynthesis. ChemBioChem [Internet]. 2013 Nov 25 [cited 2018 Jan 29];14(17):2272–5. Available from: <a href="http://www.ncbi.nlm.nih.gov/pubmed/24123841"> here </a>
+				</li>
+				<li>
+					Bacher A, Eberhardt S, Fischer M, Kis K, Richter G. B IOSYNTHESIS OF V ITAMIN B 2 (R IBOFLAVIN ). Annu Rev Nutr [Internet]. 2000 Jul [cited 2018 Jan 29];20(1):153–67. Available from:  <a href="http://www.ncbi.nlm.nih.gov/pubmed/10940330"> here </a>
+				</li>
+				<li>
+					Bacher A, Richter G, Ritz H, Eberhardt S, Fischer M, Krieger C. Biosynthesis of riboflavin: GTP cyclohydrolase II, deaminase, and reductase. Methods Enzymol [Internet]. 1997 [cited 2018 Jan 29];280:382–9. Available from:  <a href="http://www.ncbi.nlm.nih.gov/pubmed/9211333"> here </a>
+				</li>
+			</ol>
+		</p>
+	</body>
+</html>
