--- a/tabela.html
+++ b/tabela.html
@@ -57,7 +57,154 @@
 	<br>
 	<br>
 	<center><h3>Tabela Resumo</h3></center>
-	
-	
-</body>
+	<br>
+
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="dataTable_wrapper" style="margin:50; padding:; display:table" >
+				<table class="table table-condensed table-bordered" id="cssTable" style="margin:0">
+					<thead>
+						<tr>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th ></th>
+							<th colspan="3"><center>Gene Ontology</center></th>
+						</tr>
+
+						<tr>
+							<th><center>Gene ID(NCBI)</center></th>
+							<th><center>Accession nº(NCBI)</center></th>
+							<th><center>Locus Tag</center></th>
+							<th><center>Gene Name</center></th>
+							<th><center>Strand</center></th>
+							<th><center>UniprotID</center></th>
+							<th><center>Revision(Uniprot)</center></th>
+							<th><center>Accession number(protein)</center></th>
+							<th><center>Protein Name</center></th>
+							<th><center>Length</center></th>
+							<th><center>EC/TC number</center></th>
+							<th><center>Description</center></th>
+							<th><center>Localization(Loctree)</center></th>
+							<th><center>Biological Process</center></th>
+							<th><center>Molecular Function</center></th>
+							<th><center>Cellular component</center></th>
+						</tr>
+
+						<tr class='odd' role='row'>
+							<td>19832742</td>
+							<td>NC_002942.5</td>
+							<td>lpg1178</td>
+							<td>ribE</td>
+							<td>"+"</td>
+							<td>Q5ZWA7</td>
+							<td>Unreviewed; Annotation score 3/5</td>
+							<td>YP_095211</td>
+							<td>riboflavin synthase subunit alpha</td>
+							<td>204</td>
+							<td>2.5.1.9</td>
+							<td>Metabolism of Cofactors and Vitamins; catalyzes the formation of riboflavin from
+								6,7-dimethyl-8-(1-D-ribityl)lumazine</td>
+								<td>cytoplasm</td>
+								<td>NA</td>
+								<td>riboflavin synthase activity</td>
+								<td>NA</td>
+							</tr>
+
+							<tr class='odd' role='row'>
+								<td>19832744</td>
+								<td>NC_002942.5</td>
+								<td>lpg1179</td>
+								<td>ribA</td>
+								<td>"+"</td>
+								<td>Q5ZWA6</td>
+								<td>Unreviewed; Annotation score 4/5</td>
+								<td>YP_095212</td>
+								<td>riboflavin biosynthesis protein RibA</td>
+								<td>402</td>
+								<td>3.5.4.25</td>
+								<td>Metabolism of Cofactors and Vitamins</td>
+								<td>cytoplasm</td>
+								<td>riboflavin biosynthetic process</td>
+								<td>3,4-dihydroxy-2-butanone-4-phosphate synthase activity;
+									GTP binding; GTP cyclohydrolase II activity; magnesium ion binding; manganese ion binding; zinc ion binding</td>
+									<td>NA</td>
+								</tr>
+
+								<tr class='odd' role='row'>
+									<td>19832745</td>
+									<td>NC_002942.5B13	</td>
+									<td>lpg1180</td>
+									<td>ribH</td>
+									<td>"+"</td>
+									<td>Q5ZWA5	</td>
+									<td>Unreviewed; Annotation score 3/5</td>
+									<td>YP_095213</td>
+									<td>6,7-dimethyl-8-ribityllumazine synthase</td>
+									<td>155</td>
+									<td>2.5.1.9</td>
+									<td>Metabolism of Cofactors and Vitamins</td>
+									<td>cytoplasm</td>
+									<td>riboflavin biosynthetic process</td>
+									<td>6,7-dimethyl-8-ribityllumazine synthase activity;
+										transferase activity</td>
+										<td>NA</td>
+									</tr>
+
+									<tr class='odd' role='row'>
+										<td>19832745</td>
+										<td>NC_002942.5B3</td>
+										<td>lpg1177</td>
+										<td>ribD</td>
+										<td>"+"</td>
+										<td>Q5ZWA8</td>
+										<td>Unreviewed; Annotation score 3/5</td>
+										<td>YP_095210</td>
+										<td>riboflavin biosynthesis protein RibD</td>
+										<td>357</td>
+										<td>NA</td>
+										<td>Metabolism of Cofactors and Vitamins</td>
+										<td>cytoplasm</td>
+										<td>riboflavin biosynthetic process</td>
+										<td>5-amino-6-(5-phosphoribosylamino)uracil reductase activity;
+											diaminohydroxyphosphoribosylaminopyrimidine deaminase activity; zinc ion binding</td>
+											<td>NA</td>
+									</tr>
+
+									<tr class='odd' role='row'>
+											<td>19832502</td>
+											<td>NC_002942.5</td>
+											<td>lpg0936</td>
+											<td>ribF</td>
+											<td>"+"</td>
+											<td>Q5ZWZ7</td>
+											<td>Unreviewed; Annotation score 3/5</td>
+											<td>YP_094970</td>
+											<td>riboflavin biosynthesis RibF</td>
+											<td>328</td>
+											<td>NA</td>
+											<td>Metabolism of Cofactors and Vitamins</td>
+											<td>cytoplasm</td>
+											<td>FAD biosynthetic process;
+												FMN biosynthetic process;
+												riboflavin biosynthetic process</td>
+												<td>ATP binding; FMN adenylyltransferase activity;
+													riboflavin kinase activity</td>
+													<td>NA</td>
+											</tr>
+										</table>
+									</div>
+								</div>
+							</div>
+		<p> <a href="./scripts/Tabela/tabela1.4.xlsx"> Aqui </a> encontra-se o ficheiro excel com toda a informação filtrada para a tabela.</p>
+	</body>
 
