Alterações finais. Estirpes passadas todas para itálico.

--- a/alinhamento.html
+++ b/alinhamento.html
@@ -84,7 +84,7 @@
 			<figcaption>Fig1. Árvore filogenética obtida através de BioPython </figcaption>
 		</center>
 	
-		<p>&nbsp &nbsp &nbsp Após análise destes resultados, podemos verificar que as proteínas em questão que apresentam uma maior semelhança evolutiva são aquelas pertencentes às estirpes <i>Legionella sainthelensi</i>, <i>Legionella santicrucis</i> e a <i>Legionella longbeachae</i>, pelo que se pode inferir que estas proteínas serão as mais semelhantes funcional e estruturalmente.  Quanto à proteína da <i>Legionella pneumophila Philadelphia 1</i>, esta tem mais semelhanças com a proteína da <i>Legionela norrlandica</i>. </p>
+		<p>&nbsp &nbsp &nbsp Após análise destes resultados, podemos verificar que as proteínas em questão que apresentam uma maior semelhança evolutiva são aquelas pertencentes às estirpes <i>Legionella sainthelensi</i><, <i>Legionella santicrucis</i> e a <i>Legionella longbeachae</i>, pelo que se pode inferir que estas proteínas serão as mais semelhantes funcional e estruturalmente.  Quanto à proteína da <i>Legionella pneumophila Philadelphia 1</i>, esta tem mais semelhanças com a proteína da <i>Legionela norrlandica</i>. </p>
 
 	<ul style="list-style-type:disc"> 
 		<li><h5>RibE - lpg1178</h5></li>
@@ -105,7 +105,7 @@
 			<figcaption>Fig3. Árvore filogenética obtida através de BioPython</figcaption>
 		</center>
 
-		<p>&nbsp &nbsp &nbsp Após a análise desta árvore filogenética, podemos concluir que as proteínas das estirpes <i>Legionella quateirensise</i> e <i>Legionella steigerwaltii</i> são as mais semelhantes, pelo que serão as mais parecidas funcional e estruturalmente. Quanto à proteína da <i>Legionella pneumophila Philadelphia 1</i>, esta tem mais semelhanças com a proteína de estirpe <i>Legionella cherrii</i>.
+		<p>&nbsp &nbsp &nbsp Após a análise desta árvore filogenética, podemos concluir que as proteínas das estirpes <i>Legionella quateirensis</i> e <i>Legionella steigerwaltii</i> são as mais semelhantes, pelo que serão as mais parecidas funcional e estruturalmente. Quanto à proteína da <i>Legionella pneumophila Philadelphia 1</i>, esta tem mais semelhanças com a proteína de estirpe <i>Legionella cherrii</i>.
 		</p>
 
 
