--- a/homologiasBLAST.html
+++ b/homologiasBLAST.html
@@ -63,7 +63,7 @@
 
 	<p>
 		<a href="./scripts/BLAST/Blast.py"> Aqui </a> encontra-se o script que executa a análise de homologias por Blast.
-		
+
 		De forma a poder executar esse script corretamente, é necessário ter os seguintes ficheiros, para cada proteína:
 		<ol>
 		<li><a href="./scripts/Tabela/prot1.fasta">Proteina 1</a></li>
@@ -76,9 +76,6 @@
 
 	</p>
 
-
-
-
 	<ul style="list-style-type:disc">
 		<li><h5> Gene ribF </h5></li>	
 	</ul>
@@ -86,11 +83,11 @@
 	<p>A proteína codificada por este gene é a riboflavin biosynthesis RibF, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN. As proteínas e respetivos organismos com a maior homologia com a proteína em estudo foram ordenadas por ordem decrescente:
 	
 	<ol>
-	<li>bifunctional riboflavin kinase/FAD synthetase da Legionella norrlandica, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN;</li>
-	<li>bifunctional riboflavin kinase/FAD synthetase da Legionella shakespearei, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN;</li>
-	<li>bifunctional riboflavin kinase/FAD synthetase da Legionella anisa, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN;</li>
-	<li>bifunctional riboflavin kinase/FAD synthetase da Legionella drancourtii, cujas funções não se encontram descritas na Uniprot;</li>
-	<li>bifunctional riboflavin kinase/FAD synthetase da Legionella fallonii, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN</li>
+	<li>bifunctional riboflavin kinase/FAD synthetase da <i>Legionella norrlandica</i>, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN;</li>
+	<li>bifunctional riboflavin kinase/FAD synthetase da <i>Legionella shakespearei</i>, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN;</li>
+	<li>bifunctional riboflavin kinase/FAD synthetase da <i>Legionella anisa</i>, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN;</li>
+	<li>bifunctional riboflavin kinase/FAD synthetase da <i>Legionella drancourtii</i>, cujas funções não se encontram descritas na Uniprot;</li>
+	<li>bifunctional riboflavin kinase/FAD synthetase da <i>Legionella fallonii</i>, cujas funções são atividade catalítica, biossíntese de FAD e biossíntese de FMN</li>
 	</ol>
 	</p>
 
@@ -102,11 +99,11 @@
 	<p>A proteína codificada por este gene é a riboflavin biosynthesis protein RibD, cujas funções são ser cofator e a biossíntese da riboflavina. As proteínas e respetivos organismos com a maior homologia com a proteína em estudo foram ordenadas por ordem decrescente:
 
 	<ol>
-	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da Legionella norrlandica, cujas funções são ser cofator e a biossíntese da riboflavina;</li>
-	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da Legionella sainthelensi, cujas funções não se encontram descritas na Uniprot;</li>
-	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da Legionella gratiana, cujas funções são ser cofator e a biossíntese da riboflavina; </li>
-	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da Legionella santicrucis, cujas funções são ser cofator e a biossíntese da riboflavina; </li>
-	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da Legionella longbeachae, cujas funções são ser cofator e a biossíntese da riboflavina.</li>
+	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da <i>Legionella norrlandica</i>, cujas funções são ser cofator e a biossíntese da riboflavina;</li>
+	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da <i>Legionella sainthelensi</i>, cujas funções não se encontram descritas na Uniprot;</li>
+	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da <i>Legionella gratiana</i>, cujas funções são ser cofator e a biossíntese da riboflavina; </li>
+	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da <i>Legionella santicrucis</i>, cujas funções são ser cofator e a biossíntese da riboflavina; </li>
+	<li>bifunctional diaminohydroxyphosphoribosylaminopyrimidine deaminase/5-amino-6-(5-phosphoribosylamino) uracil reductase RibD da <i>Legionella longbeachae</i>, cujas funções são ser cofator e a biossíntese da riboflavina.</li>
 	</ol>
 	</p>
 
@@ -118,11 +115,11 @@
 	<p>A proteína codificada por este gene é a riboflavin synthase subunit alfa, cuja função é a síntese de riboflavina. As proteínas e respetivos organismos com a maior homologia com a proteína em estudo foram ordenadas por ordem decrescente:
 
 	<ol>
-	<li>riboflavin synthase da Legionella norrlandica, cujas funções não se encontram descritas na Uniprot;</li>
-	<li>riboflavin synthase da Legionella moravica, cuja função é a síntese de riboflavina;</li>
-	<li>riboflavin synthase da Legionella waltersii, cuja função é a síntese de riboflavina;</li>
-	<li>riboflavin synthase da Legionella worsleiensis, cuja função é a síntese de riboflavina;</li>
-	<li>riboflavin synthase da Legionella shakespearei, cujas funções não se encontram descritas na Uniprot.</li>
+	<li>riboflavin synthase da <i>Legionella norrlandica</i>, cujas funções não se encontram descritas na Uniprot;</li>
+	<li>riboflavin synthase da <i>Legionella moravica</i>, cuja função é a síntese de riboflavina;</li>
+	<li>riboflavin synthase da <i>Legionella waltersii</i>, cuja função é a síntese de riboflavina;</li>
+	<li>riboflavin synthase da <i>Legionella worsleiensis</i>, cuja função é a síntese de riboflavina;</li>
+	<li>riboflavin synthase da <i>Legionella shakespearei</i>, cujas funções não se encontram descritas na Uniprot.</li>
 	</ol>
 	</p>
 
@@ -134,11 +131,11 @@
 	<p>A proteína codificada por este gene é a riboflavin biosynthesis protein RibA, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina. As proteínas e respetivos organismos com a maior homologia com a proteína em estudo foram ordenadas por ordem decrescente:
 
 	<ol>
-	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da Legionella fallonii, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina;</li>
-	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da Legionella quateirensis, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina;</li>
-	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II daLegionella steigerwaltii, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina;</li>
-	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II daLegionella moravica, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina; </li>
-	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da Legionella cherrii, cujas funções não se encontram descritas na Uniprot.</li>
+	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da <i>Legionella fallonii</i>, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina;</li>
+	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da <i>Legionella quateirensis</i>, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina;</li>
+	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da<i>Legionella steigerwaltii</i>, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina;</li>
+	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da<i>Legionella moravica</i>, cujas funções são atividade catalítica, ser cofator e biossíntese de riboflavina; </li>
+	<li>bifunctional 3,4-dihydroxy-2-butanone-4-phosphate synthase/GTP cyclohydrolase II da <i>Legionella cherrii</i>, cujas funções não se encontram descritas na Uniprot.</li>
 	</ol>
 	</p>
 
@@ -149,10 +146,10 @@
 	<p>A proteína codificada por este gene é a 6,7-dimethyl-8-ribityllumazine synthase, cujas funções são atividade catalítica e biossíntese de riboflavina. As proteínas e respetivos organismos com a maior homologia com a proteína em estudo foram ordenadas por ordem decrescente: 
 
 	<ol>
-	<li>6,7-dimethyl-8-ribityllumazine synthase da Legionella fallonii, cujas funções são atividade catalítica e biossíntese de riboflavina;</li>
-	<li>6,7-dimethyl-8-ribityllumazine synthase da Legionella quateirensis, cujas funções são atividade catalítica e biossíntese de riboflavina; </li>
-	<li>6,7-dimethyl-8-ribityllumazine synthase da Legionella moravica, cujas funções são atividade catalítica e biossíntese de riboflavina;</li>
-	<li>6,7-dimethyl-8-ribityllumazine synthase da Legionella waltersii, cujas funções são atividade catalítica e biossíntese de riboflavina;</li>
-	<li>6,7-dimethyl-8-ribityllumazine synthase da Legionella shakespearei, cujas funções não se encontram descritas na Uniprot.</li>
+	<li>6,7-dimethyl-8-ribityllumazine synthase da <i>Legionella fallonii</i>, cujas funções são atividade catalítica e biossíntese de riboflavina;</li>
+	<li>6,7-dimethyl-8-ribityllumazine synthase da <i>Legionella quateirensis</i>, cujas funções são atividade catalítica e biossíntese de riboflavina; </li>
+	<li>6,7-dimethyl-8-ribityllumazine synthase da <i>Legionella moravica</i>, cujas funções são atividade catalítica e biossíntese de riboflavina;</li>
+	<li>6,7-dimethyl-8-ribityllumazine synthase da <i>Legionella waltersii</i>, cujas funções são atividade catalítica e biossíntese de riboflavina;</li>
+	<li>6,7-dimethyl-8-ribityllumazine synthase da <i>Legionella shakespearei</i>, cujas funções não se encontram descritas na Uniprot.</li>
 	</ol>
 	</p>
