Alterações finais do trabalho. Correção das extensoes das imagens. Pequenas identações e adição do relatório do projeto.

--- a/Introducao.html
+++ b/Introducao.html
@@ -59,14 +59,14 @@
 	<center><h3>Introdução</h3></center>
 	<p>
 		&nbsp &nbsp &nbsp A Doença do Legionário foi reconhecida pela primeira vez em 1976 após um surto de
-		pneumonia numa convenção que decorria em Filadélfia. Após análise dos pacientes, o microorganismo
+		pneumonia numa convenção que decorria em Filadélfia. Após a análise dos pacientes, o microorganismo
 		responsável pela infeção foi identificado como um bacilo gram-negativo
-		a que se deu o nome de Legionella pneumophila. Atualmente sabe-se que esta bactéria é
+		a que se deu o nome de <i>Legionella pneumophila</i>. Atualmente sabe-se que esta bactéria é
 		aeróbica e pertence ao filo Proteobacteria, classe Gammaproteobacteria, ordem Legionellales e à
 		família das Legionellaceae (família esta que engloba mais de 50 espécies e 70 subespécies). A
-		Legionella pneumophila em específico tem 16 estirpes que estão designadas de 1 a 16, sendo que as
+		<i>Legionella pneumophila</i> em específico tem 16 estirpes que estão designadas de 1 a 16, sendo que as
 		estirpes 1, 4 e 6 são as mais comummente implicadas na infeção em humanos (a estirpe em que o
-		nosso trabalho se focará é a Legionella pneumophila subsp. pneumophila str. Philadelphia 1, sendo
+		nosso trabalho se focará é a <i>Legionella pneumophila subsp. pneumophila str. Philadelphia 1</i>, sendo
 		esta a estirpe mais patogénica causando entre 70 e 90% dos casos de Legionelose em pacientes
 		adultos)<sup>1</sup>.<br><br>
 		&nbsp &nbsp &nbsp Este microorganismo desencadeia Legionelose em pacientes infetados, podendo esta
@@ -81,8 +81,7 @@
 		habitats aquáticos naturais, como rios ou lagos, ou artificiais, como torres de água, sistemas de
 		refrigeração, equipamento de terapia de respiração, chuveiros ou spas. O meio de crescimento tem que conter preferencialmente L-
 		cisteína e ferro, quanto à temperatura ideal de crescimento esta situa-se entre os 28 e os 40ºC, sendo
-		que abaixo de 20ºC a bactéria encontra-se dormente e acima de 60ºC o microrganismo morre. A transmissão aos humanos ocorre através da inalação de aerossóis contaminados com a Legionella
-		pneumophila ou através do contacto entre feridas e água contaminada.<br><br>
+		que abaixo de 20ºC a bactéria encontra-se dormente e acima de 60ºC o microrganismo morre. A transmissão aos humanos ocorre através da inalação de aerossóis contaminados com a <i>Legionella pneumophila</i> ou através do contacto entre feridas e água contaminada.<br><br>
 		&nbsp &nbsp &nbsp A fisiopatologia da Legionella inicia-se quando os microrganismos são aspirados e chegam aos
 		alvéolos pulmonares onde sofrem fagocitose pelos macrófagos aí presentes. Uma vez que estes
 		macrófagos não têm a capacidade de matar a Legionella esta continua o seu crescimento e divisão
