--- a/analisegeneseproteinas.html
+++ b/analisegeneseproteinas.html
@@ -37,7 +37,7 @@
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
+						<a class="nav-link" href="./relatorio.pdf">Relatório &nbsp &nbsp &nbsp</a>
 					</li>
 
 					<li class="nav-item active">
@@ -82,21 +82,21 @@
 	<p> Abaixo estão expostos os outputs do script que permite preencher a Tabela Resumo.
 
 		<center>
- 		<img src="./website/img/Print_preencher_tabela.png" alt="" >
+ 		<img src="./website/img/Print_preencher_tabela.PNG" alt="" >
 			<figcaption>Fig1. Gene name, gene ID, locus_tag, strand, EC_number e Description</figcaption>
 		</center>
 
 		<br>
 
 		<center>
- 		<img src="./website/img/Print_preencher_tabela_2.png" alt="" >
+ 		<img src="./website/img/Print_preencher_tabela_2.PNG" alt="" >
 			<figcaption>Fig2. Protein name, accession number e length </figcaption>
 		</center>
 
 		<br>
 
 		<center>
- 		<img src="./website/img/Print_preencher_tabela_3.png" alt="" >
+ 		<img src="./website/img/Print_preencher_tabela_3.PNG" alt="" >
 			<figcaption>Fig3. UniprotID e Accession Number de cada proteína</figcaption>
 		</center>
 
